@@ -1,3 +1,7 @@
+2016-05-06  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.target/i386/avx512bw-vpmaddwd-3.c: New test.
+
 2016-05-06  Yuri Rumyantsev  <ysrumyan@gmail.com>
 
 	PR debug/70935
